@@ -12,6 +12,7 @@ Version 0.4.1 - UNRELEASED
   * always move up to safety height in this case
  * optional visualization of toolpath direction
  * visibility of 3D view items is now configurable in the 3D window
+  * via a button and via the context menu
 
 Version 0.4.0.1 - 2010-10-24
  * disabled parallel processing for Windows standalone executable
